@@ -1,3 +1,7 @@
+2019-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Hide current angle unit from result
+
 2019-03-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Improve/fix "to"-button menu
